--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,19 +3,21 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 16
+      nodejs: 14
 
   pre_build:
     commands:
       - echo Running tests
       - npm install
       - npm test
+      - npm start
 
   build:
     commands:
       - echo Building for production
       - rm -rf node_modules
       - npm install --production
+      - npm start --production
 
 artifacts:
   files:
