--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,13 +3,12 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      node: 14
+      nodejs: 16
 
   pre_build:
     commands:
       - echo Running tests
       - npm install
-      - npm test
       - npm start
 
   build:
